--- a/style.css
+++ b/style.css
@@ -20,14 +20,14 @@ body {
 /* Title of the resume */
 h1 {
     font-size: 55px;
-    color: #6495ED;
+    color: #6441A4;
     text-align:center;
     margin-bottom:15px;
 }
 
 /* Titles of categories */
 h2 {
-    color: #6495ED;
+    color: #6441A4;
 }
 /* There is a bar just before each category */
 h2:before {
@@ -36,7 +36,7 @@ h2:before {
     margin-right:1%;
     width: 16%;
     height: 10px;
-    background-color: #6495ED;
+    background-color: #6441A4;
 }
 
 /* Definitions */
@@ -65,7 +65,7 @@ a {
     color: #6495ED;
 }
 a:hover, a:active {
-    background-color: #6495ED;
+    background-color: #6441A4;
     color: #FFFFFF;
     text-decoration: none;
     text-shadow: 1px 1px 1px #333;
@@ -73,5 +73,5 @@ a:hover, a:active {
 
 /* Horizontal separators */
 hr {
-    color: #6495ED;
+    color: #6441A4;
 }
